--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ enableRobotsTXT = true
 ## Site Settings
 [params]
 author = "Erlich Bachman"
-intro = "Startup Guru Extraordinaire"
+intro = "Startup Guru Extraordinaired"
 description = "Now @Pied Piper. Previously @Hacker Hostel, @Bachmanity and @Aviato. <br/> \"What is F times 5? It's Fleventy-five.\""
 authorimage = "headshot.jpg"
 dateformat = "Jan 2, 2006"
